--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     github.com/project-slug: fewproud/sand2Create
     backstage.io/techdocs-ref: dir:.
-    jenkins.io/job-full-name: "myprojects/sand2Create"
+    jenkins.io/job-full-name: "default:myprojects/sand2Create"
 spec:
   type: website
   lifecycle: experimental
