--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,6 +7,6 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     jenkins.io/job-full-name: "myprojects/sand2Create"
 spec:
-  type: website
+  type: service
   lifecycle: experimental
   owner: "group:default/fewproud"
