--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,6 +6,7 @@ metadata:
     github.com/project-slug: fewproud/sand2Create
     backstage.io/techdocs-ref: dir:.
     jenkins.io/job-full-name: "myprojects/sand2Create"
+    deploy.devops-automation/component_name: "myapp"
 spec:
   type: service
   lifecycle: experimental
