--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,8 +7,8 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     jenkins.io/job-full-name: "myprojects/sand2Create"
     deploy.devops-automation/component_name: "SIT-tester"
-    test.devops-automation/projectID: "1100"
-    test.devops-automation/space: "Initial"
+    test.devops-automation/projectID: "1150"
+    test.devops-automation/space: "testhub"
 spec:
   type: service
   lifecycle: experimental
