--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,7 +6,7 @@ metadata:
     github.com/project-slug: fewproud/sand2Create
     backstage.io/techdocs-ref: dir:.
     jenkins.io/job-full-name: "myprojects/sand2Create"
-    deploy.devops-automation/component_name: "SIT-tester1"
+    deploy.devops-automation/component_name: "SIT-tester"
     test.devops-automation/projectID: "1150"
     test.devops-automation/space: "Initial"
     build.devops-automation/projectIDs: "21,22"
